--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -9,7 +9,10 @@
 <div>
 <h1>List OF all User</h1>
 </div>
+<a th:href="@{/logout}" class="btn btn-danger">Logout</a>
+
 <div>
+<br>
 <table class = "table table-striped table-bordered">
         <thead class="thread-dark">
             <tr>
